welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: illegal start of simple pattern
var:estSurBiscuit=0
   ^RunFour:3: error: '=' expected but ';' found.
estSurBiscuit=estSurBiscuit+1
^